--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -139,9 +139,6 @@ footer {
   & p {
     align-self: center;
     line-height: 12px;
-    @include mq(medium) {
-      margin-right: 15em;
-    }
   }
 
 
